--- a/jehc-src-modules/jehc/xtmodules/xtcore/sources/jdbc.properties
+++ b/jehc-src-modules/jehc/xtmodules/xtcore/sources/jdbc.properties
@@ -21,9 +21,9 @@ slave.databasetype=mysql
 
 ##测试数据源
 driverClassTest=oracle.jdbc.driver.OracleDriver
-urlTest=jdbc:oracle:thin:@10.20.2.10:1521/htd
-usernameTest=prephoneycomb
-passwordTest=prephoneycomb
+urlTest=jdbc:oracle:thin:@192.168.2.1:1521/test
+usernameTest=test
+passwordTest=test
 
 
 
