--- a/jehc-src-modules/tk-filters.properties
+++ b/jehc-src-modules/tk-filters.properties
@@ -55,7 +55,7 @@ ClusterCheckFilter.ClientError=false
 
 # WARNING: GZIPFilter is currently not recommended for production use.
 #          It does not send all data under certain conditions.
-GZIPFilter.Enabled=false
+GZIPFilter.Enabled=true
 
 # Its possible for the GZIPFilter to log statistics about the compression
 # ratios and byte savings it is achieving. This turns that on or off.
