--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebRoot/WEB-INF/view/pc/xt-view/xt-perpetualcalendar/xt-perpetualcalendar.jsp=UTF-8
+encoding//jehc-src-modules/jehc/xtmodules/xtcore/sources/jdbc.properties=UTF-8
 encoding/<project>=UTF-8
