--- a/jehc-src-modules/jehc/xtmodules/xtcore/sources/properties/config.properties
+++ b/jehc-src-modules/jehc/xtmodules/xtcore/sources/properties/config.properties
@@ -10,4 +10,5 @@ grid_toolbar_gaps=
 grid_toolbar_moretext_gaps=->
 ##Solr Home
 solr_home_path=F\://jehcsource/honeycomb/solr/home
-
+##design is show win for edit, true is show else display
+lc_design_displaywin_for_edit = true
