--- a/WebRoot/WEB-INF/classes/jehc/xtmodules/xtcore/sources/properties/zh.properties
+++ b/WebRoot/WEB-INF/classes/jehc/xtmodules/xtcore/sources/properties/zh.properties
@@ -1,5 +1,5 @@
-sys_pt_login=\u6B22\u8FCE\u60A8\u4F7F\u7528jEhc\u4E1A\u52A1\u6D41\u7A0B\u5E73\u53F0...
+sys_pt_login=jEhc\u5F00\u6E90\u5E73\u53F0...
 sys_pt_index=jEhc
 sys_pt_index_foot=\u7248\u6743\u5F52\u5C5E\uFF1AjEhc\u4FE1\u606F\u6280\u672F\u6709\u9650\u516C\u53F8(2015-2020)
-sys_pt_index_top=\u60A8\u6B63\u5728\u4F7F\u7528\u7684\u662FjEhc\u4E1A\u52A1\u6D41\u7A0B\u5E73\u53F0...
-sys_pt_session=\u6B22\u8FCE\u60A8\u4F7F\u7528jEhc\u4E1A\u52A1\u6D41\u7A0B\u5E73\u53F0...
+sys_pt_index_top=jEhc\u5F00\u6E90\u5E73\u53F0...
+sys_pt_session=jEhc\u5F00\u6E90\u5E73\u53F0...
