--- a/jehc-src-modules/jehc/xtmodules/xtcore/sources/jdbc.properties
+++ b/jehc-src-modules/jehc/xtmodules/xtcore/sources/jdbc.properties
@@ -20,10 +20,10 @@ slave.databasetype=mysql
 
 
 ##测试数据源
-driverClassTest=oracle.jdbc.driver.OracleDriver
-urlTest=jdbc:oracle:thin:@192.168.2.1:1521/test
-usernameTest=test
-passwordTest=test
+driverClassTest=com.mysql.jdbc.Driver
+urlTest=jdbc:mysql://localhost:3306/hs?useOldAliasMetadataBehavior=true&amp;useUnicode=true&amp;characterEncoding=utf8&allowMultiQueries=true
+usernameTest=root
+passwordTest=123456
 
 
 
