--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -21,7 +21,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath*:/jehc/xtmodules/xtcore/sources/spring/*.xml
+			classpath*:/sources/spring/*.xml
 		</param-value>
 	</context-param>
 
@@ -44,7 +44,7 @@
 	<!-- Logback日志配置 -->
 	<context-param>
 		<param-name>logbackConfigLocation</param-name>
-		<param-value>classpath:jehc/xtmodules/xtcore/sources/logback.xml</param-value>
+		<param-value>classpath:sources/logback.xml</param-value>
 	</context-param>
 	<listener>
 		<listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
@@ -75,7 +75,7 @@
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
-				classpath:/jehc/xtmodules/xtcore/sources/spring/springmvc.xml
+				classpath:/sources/spring/springmvc.xml
 			</param-value>
 		</init-param>
 	</servlet>
@@ -101,7 +101,7 @@
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>
-			classpath:/jehc/xtmodules/xtcore/sources/log4j.properties
+			classpath:/sources/log4j.properties
 		</param-value>
 	</context-param>
 	<listener>
