--- a/jehc-src-config/config/jdbc.properties
+++ b/jehc-src-config/config/jdbc.properties
@@ -21,7 +21,7 @@ slave.databasetype=mysql
 
 ##测试数据源
 driverClassTest=com.mysql.jdbc.Driver
-urlTest=jdbc:mysql://localhost:3306/hs?useOldAliasMetadataBehavior=true&amp;useUnicode=true&amp;characterEncoding=utf8&allowMultiQueries=true
+urlTest=jdbc:mysql://localhost:3306/jehc?useOldAliasMetadataBehavior=true&amp;useUnicode=true&amp;characterEncoding=utf8&allowMultiQueries=true
 usernameTest=root
 passwordTest=123456
 
