--- a/jehc-p/pom.xml
+++ b/jehc-p/pom.xml
@@ -30,8 +30,7 @@
         <!-- Activiti版本号 -->
         <activiti.version>5.22.0</activiti.version>
         <!-- solr全文检索版本号 -->
-        <solrj.version>4.10.4</solrj.version>
-        <solr.core.version>4.10.1</solr.core.version>
+        <solr.version>4.10.1</solr.version>
         <!-- logback日志版本 -->
         <logback-classic.version>1.1.2</logback-classic.version>
 		<logback-core.version>1.1.2</logback-core.version>
@@ -47,7 +46,9 @@
         <servlet-api.version>3.1.0</servlet-api.version>
 		<jsp-api.version>2.1.3-b06</jsp-api.version>
 		<jsp-tag-api.version>1.2.1</jsp-tag-api.version>
+		<!-- 
 		<commons-lang.version>2.5</commons-lang.version>
+		 -->
 		<mysql.version>5.1.34</mysql.version>
 		<jedis.version>2.8.0</jedis.version>
 		<fastjson.version>1.2.9</fastjson.version>
@@ -83,16 +84,22 @@
 		<jackson-annotations.version>2.6.2</jackson-annotations.version>
 		<jackson-databind.version>2.6.2</jackson-databind.version>
 		<jackson-core.version>2.6.2</jackson-core.version>
+		<!-- 
 		<spring-data-elasticsearch.version>2.0.0.RELEASE</spring-data-elasticsearch.version>
+		 -->
 		<jasperreports.version>5.1.0</jasperreports.version>
 		<itext.version>2.0.8</itext.version>
+		<!-- 
 		<iTextAsian.version>1.0</iTextAsian.version>
+		 -->
 		<itextpdf.version>5.1.2</itextpdf.version>
 		<groovy-all.version>2.4.5</groovy-all.version>
 		<mybatis-pagehelper.version>4.2.1</mybatis-pagehelper.version>
 		<dom4j.version>1.6.1</dom4j.version>
 		<jaxen.version>1.1.1</jaxen.version>
+		<!-- 
 		<dbcp.version>1.2.2</dbcp.version>
+		 -->
 		<jsoup.version>1.8.1</jsoup.version>
 		<jedis.version>2.9.0</jedis.version>  
         <spring.data.redis.version>1.7.1.RELEASE</spring.data.redis.version>  
@@ -109,9 +116,11 @@
         <jodd.version>3.3.2</jodd.version>
         <UserAgentUtils.version>1.2.4</UserAgentUtils.version>
         <commons-codec.version>1.7</commons-codec.version>
+        <!-- 
         <log4j.version>1.2.16</log4j.version>
 		<slf4j.api.version>1.7.21</slf4j.api.version>
 		<c3p0.version>0.9.1.2</c3p0.version>
+		 -->
 	    <bonecp.version>0.8.0.RELEASE</bonecp.version>
 	    <jaxen.version>1.1.6</jaxen.version>
 		<swagger2.version>2.7.0</swagger2.version>
@@ -364,7 +373,7 @@
 		</dependency>
 		<!-- JSP标准标签库结束 -->
 		
-        <!-- 日志相关包开始 -->
+        <!-- 日志相关包开始
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -375,6 +384,7 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.api.version}</version>
         </dependency>
+        -->
 		<!-- 日志相关包结束 -->
 		
 		<!-- logback日志相关包开始 -->
@@ -485,25 +495,171 @@
 		</dependency>
 	    <!-- activiti5.22工作流 结束-->
 	    
-	    <!-- solr4.10.4全文检索开始 -->
-		<dependency>
+	    <!-- solr全文检索开始 -->
+	    <!-- dataimporthandler放在该位置 -->
+	    <dependency>
 		    <groupId>org.apache.solr</groupId>
-		    <artifactId>solr-core</artifactId>
-		    <version>${solr.core.version}</version>
+		    <artifactId>solr-dataimporthandler</artifactId>
+		    <version>${solr.version}</version>
+		    <exclusions>
+		    	<!-- 去除jetty相关 -->
+	        	<exclusion>
+				    <groupId>org.eclipse.jetty.orbit</groupId>
+				    <artifactId>javax.servlet</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-deploy</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-continuation</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		 <groupId>org.eclipse.jetty</groupId>
+				     <artifactId>jetty-http</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-io</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-jmx</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-security</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-server</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-servlet</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-util</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-webapp</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-xml</artifactId>
+	        	</exclusion>
+	        	
+	        	<!-- 去除hadoop -->
+	        	<exclusion>
+	        		<groupId>org.apache.hadoop</groupId>
+      				<artifactId>hadoop-annotations</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.apache.hadoop</groupId>
+      				<artifactId>hadoop-auth</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.apache.hadoop</groupId>
+      				<artifactId>hadoop-common</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.apache.hadoop</groupId>
+      				<artifactId>hadoop-hdfs</artifactId>
+	        	</exclusion>
+	        </exclusions>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.solr</groupId>
-		    <artifactId>solr-dataimporthandler</artifactId>
-		    <version>${solr.core.version}</version>
-		</dependency>		
-		<!-- solr4.10.4全文检索结束 -->
+		    <artifactId>solr-core</artifactId>
+		    <version>${solr.version}</version>
+		    <exclusions>
+		    	<!-- 采用通配符去除依赖 -->
+		    	<exclusion>
+				    <groupId>*</groupId>
+				    <artifactId>*</artifactId>
+	        	</exclusion>
+		    	<!-- 去除jetty相关
+	        	<exclusion>
+				    <groupId>org.eclipse.jetty.orbit</groupId>
+				    <artifactId>javax.servlet</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-deploy</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-continuation</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		 <groupId>org.eclipse.jetty</groupId>
+				     <artifactId>jetty-http</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-io</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-jmx</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-security</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-server</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-servlet</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-util</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-webapp</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-xml</artifactId>
+	        	</exclusion>
+	        	-->
+	        	<!-- 去除hadoop 
+	        	<exclusion>
+	        		<groupId>org.apache.hadoop</groupId>
+      				<artifactId>hadoop-annotations</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.apache.hadoop</groupId>
+      				<artifactId>hadoop-auth</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.apache.hadoop</groupId>
+      				<artifactId>hadoop-common</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>org.apache.hadoop</groupId>
+      				<artifactId>hadoop-hdfs</artifactId>
+	        	</exclusion>
+	        	-->
+	        </exclusions>
+		</dependency>
+		<!-- solr全文检索结束 -->
 		
-		<!-- dbcp开始 -->
+		<!-- dbcp开始 
 		<dependency>
 		    <groupId>commons-dbcp</groupId>
 		    <artifactId>commons-dbcp</artifactId>
 		    <version>${dbcp.version}</version>
 		</dependency>
+		-->
 		<!-- dbcp开始 -->
 		
 		<!-- hessian开始 -->
@@ -522,12 +678,13 @@
 		</dependency>
 		<!-- jackson-databind结束 -->
 		
-		<!-- commons-lang开始 -->
+		<!-- commons-lang开始 
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>${commons-lang.version}</version>
 		</dependency>
+		-->
 		<!-- commons-lang结束 -->
 		
 		<!-- fastjson开始 -->
@@ -615,12 +772,14 @@
 		</dependency>
 		<!-- poi结束 -->
 		
+		<!-- 
 		<dependency>
 		    <groupId>org.jsoup</groupId>
 		    <artifactId>jsoup</artifactId>
 		    <version>${jsoup.version}</version>
 		</dependency>
-				
+		-->	
+		
 		<!-- ftp开始 -->
 		<dependency>
 			<groupId>commons-net</groupId>
@@ -791,7 +950,7 @@
 		</dependency>
 		<!-- UserAgentUtils结束 -->
 		
-		<!-- 解决编译时候tools rt jce等 开始 -->
+		<!-- 解决编译时候tools rt jce等 开始  
 		<dependency>
 		    <groupId>jdk.tools</groupId>
 		    <artifactId>jdk.tools</artifactId>
@@ -799,6 +958,8 @@
 		    <scope>system</scope>
 		    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
 		</dependency>
+		-->
+		<!-- 
 		<dependency>
             <groupId>com.sun</groupId>
             <artifactId>rt</artifactId>
@@ -806,7 +967,6 @@
             <scope>system</scope>
             <systemPath>${JAVA_HOME}/jre/lib/rt.jar</systemPath>
         </dependency>
-        
         <dependency>
             <groupId>com.sun</groupId>
             <artifactId>jce</artifactId>
@@ -814,6 +974,7 @@
             <scope>system</scope>
             <systemPath>${JAVA_HOME}/jre/lib/jce.jar</systemPath>
         </dependency>
+         -->
         <!-- 解决编译时候tools rt等 结束 -->
         
 		<!-- 解决BASE64Decoder开始 -->
@@ -824,20 +985,22 @@
 		</dependency>
 		<!-- 解决BASE64Decoder结束 -->
 		
-		<!-- c3p0配置开始 -->
+		<!-- c3p0配置开始 
 		<dependency>  
 	        <groupId>c3p0</groupId>  
 	        <artifactId>c3p0</artifactId>  
 	        <version>${c3p0.version}</version>  
 	    </dependency>  
+	    -->
 	 	<!-- c3p0配置结束 -->
 	  	
-	  	<!-- bonecp配置开始 -->
+	  	<!-- bonecp配置开始 
 	    <dependency>  
 	        <groupId>com.jolbox</groupId>  
 	        <artifactId>bonecp</artifactId>  
 	        <version>${bonecp.version}</version>  
 	    </dependency>  
+	    -->
 	    <!-- bonecp配置结束 -->
 
 	    <!-- jaxen开始 -->
