--- a/jehc-web/src/main/webapp/WEB-INF/web.xml
+++ b/jehc-web/src/main/webapp/WEB-INF/web.xml
@@ -51,7 +51,12 @@
 		<listener-class>
 			jehc.xtmodules.xtcore.threadlocalutil.ServletRequestListener</listener-class>
 	</listener>
-
+	<!-- 监听在线人数 -->
+	<listener>
+		<listener-class>
+			jehc.xtmodules.xtcore.session.OnLinesessionlistener
+		</listener-class>
+	</listener>
 	<!-- Logback日志配置 -->
 	<context-param>
 		<param-name>logbackConfigLocation</param-name>
