--- a/jehc-web/pom.xml
+++ b/jehc-web/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>jehc-p</groupId>
 		<artifactId>jehc-p</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../jehc-p/pom.xml</relativePath>
 	</parent>
 
 
@@ -135,6 +136,14 @@
 					<include>**/*.properties</include>
 				</includes>
 			</resource>
+			<!-- 
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+			 -->
 		</resources>
 	</build>
 </project>
