--- a/jehc-p/pom.xml
+++ b/jehc-p/pom.xml
@@ -110,7 +110,7 @@
         <pdfbox.version>1.8.2</pdfbox.version>
         <amqp.version>1.3.5.RELEASE</amqp.version>
         <netty.version>4.1.14.Final</netty.version>
-        <cglib.nodep.version>2.1_3</cglib.nodep.version>
+        <cglib.nodep.version>3.2.6</cglib.nodep.version>
         <jackson.core.asl>1.8.4</jackson.core.asl>
         <jackson.mapper.asl>1.8.4</jackson.mapper.asl>
         <ehcache.core.version>2.6.8</ehcache.core.version>
