--- a/jehc-web/src/main/webapp/WEB-INF/web.xml
+++ b/jehc-web/src/main/webapp/WEB-INF/web.xml
@@ -10,50 +10,25 @@
 			classpath*:config/spring/spring.xml
 		</param-value>
 	</context-param>
-	
 	<!-- spring监听器配置 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
-	<!-- springmvc视图转发器配置 -->
-	<servlet>
-		<servlet-name>dispatcherServlet</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>
-				classpath*:config/spring/springmvc.xml
-			</param-value>
-		</init-param>
-		<!-- 解决控制层启动并加载 -->
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>dispatcherServlet</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
-	
 	<!-- Spring 刷新Introspector防止内存泄露 -->
 	<listener>
-		<listener-class>
-			org.springframework.web.util.IntrospectorCleanupListener</listener-class>
+		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
 	</listener>
 	<!-- 支持session scope的Spring bean -->
 	<listener>
-		<listener-class>
-			org.springframework.web.context.request.RequestContextListener</listener-class>
+		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
-	<!-- 监听Request会话清空ThreadLocal变量 -->
+	<!-- 监听Request会话清空ThreadLocal变量
 	<listener>
-		<listener-class>
-			jehc.xtmodules.xtcore.threadlocalutil.ServletRequestListener</listener-class>
-	</listener>
+		<listener-class>jehc.xtmodules.xtcore.threadlocalutil.ServletRequestListener</listener-class>
+	</listener> -->
 	<!-- 监听在线人数 -->
 	<listener>
-		<listener-class>
-			jehc.xtmodules.xtcore.session.OnLinesessionlistener
-		</listener-class>
+		<listener-class>jehc.xtmodules.xtcore.session.OnLinesessionlistener</listener-class>
 	</listener>
 	<!-- Logback日志配置 -->
 	<context-param>
@@ -63,30 +38,10 @@
 	<listener>
 		<listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
 	</listener>
-
-	<!-- 编码过滤器配置 -->
-	<filter>
-		<filter-name>CharacterEncodingFilter</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>utf-8</param-value>
-		</init-param>
-		<init-param>
-			<param-name>forceEncoding</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>CharacterEncodingFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-
 	<!-- 启动时执行系统类 -->
 	<listener>
 		<listener-class>jehc.xtmodules.xtcore.init.InitSetup</listener-class>
 	</listener>
- 	
 	<servlet>
 		<description>验证码</description>
 		<servlet-name>VerifyCodeServlet</servlet-name>
@@ -210,7 +165,40 @@
 	    <param-name>spring.liveBeansView.mbeanDomain</param-name>  
 	    <param-value>dev</param-value>  
 	</context-param> 
-	
+	<!-- springmvc视图转发器配置 -->
+	<servlet>
+		<servlet-name>springmvc</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>
+				classpath*:config/spring/springmvc.xml
+			</param-value>
+		</init-param>
+		<!-- 解决控制层启动并加载 -->
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>springmvc</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+	<!-- 编码过滤器配置 -->
+	<filter>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>utf-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<context-param>
 		<param-name>webAppRootKey</param-name>
 		<param-value>jehc-web</param-value>
